--- a/PersonalBanking/PersonalBanking.PresentationMVC/Views/Home/Index.cshtml
+++ b/PersonalBanking/PersonalBanking.PresentationMVC/Views/Home/Index.cshtml
@@ -8,7 +8,7 @@
     <h1>WHY ONLINE BANKING?</h1>
 </div>
 <div>
-    <img class="center-block" src="~/Images/onlineBanking.jpg" />
+    <img class="center-block" style="width: 100%; height: auto;" src="~/Images/onlineBanking.jpg" />
 </div>
 
 <div class="text-center">
