--- a/PersonalBanking/PersonalBanking.PresentationMVC/Views/Shared/_Layout.cshtml
+++ b/PersonalBanking/PersonalBanking.PresentationMVC/Views/Shared/_Layout.cshtml
@@ -38,8 +38,8 @@
                 <li class="dropdown">
                     <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Account <span class="caret"></span></a>
                     <ul class="dropdown-menu">
-                        <li><a href="#">Log In</a></li>
-                        <li><a href="#">Register</a></li>
+                        <li><a href="#"><span class="glyphicon glyphicon-log-in"></span> Log In</a></li>
+                        <li><a href="@Url.Action("Register", "User")"><span class="glyphicon glyphicon-user"></span>Register</a></li>
                     </ul>
                 </li>
             </ul>
@@ -50,9 +50,10 @@
     <div class="row">
         <div class="col-md-2"></div>
         <div class="col-md-8">@RenderBody()</div>
-        <div class="col-md-2"><!--  START: Curs.md Widget HTML 1.0-->
-            <div class="row">
-                
+        <div class="col-md-2"  style="position: relative">
+            <div class="row" style="margin-top: 20px">
+                <!--  START: Curs.md Widget HTML 1.0-->
+                <script language="JavaScript" type="text/javascript" src="http://www.curs.md/ro/curs_provider/000000/180/595657"></script><noscript><a href="http://www.curs.md/ro" target="_blank"><strong>www.curs.md</strong></a></noscript><!--  END: Curs.md Widget HTML 1.0-->
             </div>
          </div>
     </div>
