--- a/PersonalBanking/PersonalBanking.PresentationMVC/Views/Shared/_Layout.cshtml
+++ b/PersonalBanking/PersonalBanking.PresentationMVC/Views/Shared/_Layout.cshtml
@@ -7,63 +7,62 @@
     <link href="~/Content/Site.css" rel="stylesheet" type="text/css" />
     <link href="~/Content/bootstrap.min.css" rel="stylesheet" type="text/css" />
     <script src="~/Scripts/modernizr-2.6.2.js"></script>
+    <style>
+        .panel-footer.panel-custom {
+            background-color: #222;
+            border-color: #080808;
+            color: silver;
+        }
+    </style>
 </head>
-<body>
-<nav class="navbar navbar-default navbar-fixed-top ">
-    <div class="container-fluid"  >
-        <!-- Brand and toggle get grouped for better mobile display -->
-        <div class="navbar-header">
-            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
-                <span class="sr-only">Toggle navigation</span>
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-            </button>
-            <a class="navbar-brand text-white" href="#">Personal Banking</a>
-        </div>
-        <!-- Collect the nav links, forms, and other content for toggling -->
-        <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-            <ul class="nav navbar-nav">
-                <li>@Html.ActionLink("Home Page", "Index", "Home")</li>
-                <li>@Html.ActionLink("About","About","Home")</li> 
-            </ul>
-            <form class="navbar-form navbar-left">
-                <div class="form-group">
-                    <input type="text" class="form-control" placeholder="Search">
+<body style="background-image:url('../../Images/startBanking.jpg')">
+        <nav class="navbar navbar-inverse navbar-fixed-top">
+            <div class="container-fluid">
+                <!-- Brand and toggle get grouped for better mobile display -->
+                <div class="navbar-header">
+                    <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+                        <span class="sr-only">Toggle navigation</span>
+                        <span class="icon-bar"></span>
+                        <span class="icon-bar"></span>
+                        <span class="icon-bar"></span>
+                    </button>
+                    <a class="navbar-brand text-white" href="#">Personal Banking</a>
                 </div>
-                <button type="submit" class="btn btn-default">Submit</button>
-            </form>
-            <ul class="nav navbar-nav navbar-right">
-                <li><a href="#">Contact us</a></li>
-                <li class="dropdown">
-                    <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Account <span class="caret"></span></a>
-                    <ul class="dropdown-menu">
-                        <li><a href="#"><span class="glyphicon glyphicon-log-in"></span> Log In</a></li>
-                        <li><a href="@Url.Action("Register", "User")"><span class="glyphicon glyphicon-user"></span>Register</a></li>
+                <!-- Collect the nav links, forms, and other content for toggling -->
+                <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+                    <ul class="nav navbar-nav">
+                        <li>@Html.ActionLink("Home Page", "Index", "Home")</li>
+                        <li>@Html.ActionLink("About", "About", "Home")</li>
                     </ul>
-                </li>
-            </ul>
-        </div><!-- /.navbar-collapse -->
-    </div><!-- /.container-fluid -->
-</nav> 
-<div class="body-content">
-    <div class="row">
-        <div class="col-md-2"></div>
-        <div class="col-md-8">@RenderBody()</div>
-        <div class="col-md-2"  style="position: relative">
-            <div class="row" style="margin-top: 20px">
-                <!--  START: Curs.md Widget HTML 1.0-->
-                <script language="JavaScript" type="text/javascript" src="http://www.curs.md/ro/curs_provider/000000/180/595657"></script><noscript><a href="http://www.curs.md/ro" target="_blank"><strong>www.curs.md</strong></a></noscript><!--  END: Curs.md Widget HTML 1.0-->
+                    <form class="navbar-form navbar-left">
+                        <div class="form-group">
+                            <input type="text" class="form-control" placeholder="Search">
+                        </div>
+                        <button type="submit" class="btn btn-default">Submit</button>
+                    </form>
+                    <ul class="nav navbar-nav navbar-right">
+                        <li><a href="#">Contact us</a></li>
+                        <li class="dropdown">
+                            <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Account <span class="caret"></span></a>
+                            <ul class="dropdown-menu">
+                                <li><a href="#"><span class="glyphicon glyphicon-log-in"></span> Log In</a></li>
+                                <li><a href="@Url.Action("Register", "User")"><span class="glyphicon glyphicon-user"></span>Register</a></li>
+                            </ul>
+                        </li>
+                    </ul>
+                </div><!-- /.navbar-collapse -->
+            </div><!-- /.container-fluid -->
+        </nav>
+        <div class="body-content">
+            <div class="row">
+                <div class="col-md-2"></div>
+                <div class="col-md-8">@RenderBody()</div>
+                <div class="col-md-2" style="position: relative"></div>
             </div>
-         </div>
-    </div>
-    <div class="row"><hr/>
-        <div class="panel-footer">
+        </div>
+        <div class="panel-footer panel-custom navbar-fixed-bottom text-center">
             <p>&copy; @DateTime.Now.Year - Personal Banking</p>
         </div>
-    </div>
-</div>
-
     <script src="~/Scripts/jquery-1.10.2.min.js"></script>
     <script src="~/Scripts/bootstrap.min.js"></script>
 </body>
