--- a/PersonalBanking/PersonalBanking.PresentationMVC/Views/Home/About.cshtml
+++ b/PersonalBanking/PersonalBanking.PresentationMVC/Views/Home/About.cshtml
@@ -1,7 +1,12 @@
-﻿
+﻿@model PersonalBanking.Domain.Model.Account.BankAccount
+
 @{
     ViewBag.Title = "About";
 }
+
+@Model.Person;
+@Model.AccNum;
+@Model.Balance;
 
 
 
