--- a/PersonalBanking/PersonalBanking.PresentationMVC/Views/User/Register.cshtml
+++ b/PersonalBanking/PersonalBanking.PresentationMVC/Views/User/Register.cshtml
@@ -8,7 +8,7 @@
         @using (Html.BeginForm("Register", "User", FormMethod.Post, new { @class = "form-horizontal", role = "form" }))
         {
             @Html.AntiForgeryToken()
-            <div class="panel panel-primary" style="border-color: #222;background-color: aliceblue">
+            <div class="panel panel-primary" style="border-color: #222; background-color: aliceblue;">
                 <div class="panel-heading text-center" style="background-color: #222"><Span style="color:white">Personal Bank Registration</Span></div>
                 <hr />
                 <div class="row">
@@ -17,55 +17,55 @@
                         <div class="form-group">
                             @Html.LabelFor(m => m.Username, new { @class = "col-md-4 control-label" })
                             <div class="col-md-8">
-                                @Html.TextBoxFor(m => m.Username, new { @class = "form-control", placeholder = "Used for logging in" })
+                                @Html.TextBoxFor(m => m.Username, new { @class = "form-control", placeholder = "Used for logging in", required = "required" })
                             </div>
                         </div>
                         <div class="form-group">
                             @Html.LabelFor(m => m.Email, new { @class = "col-md-4 control-label" })
                             <div class="col-md-8">
-                                @Html.TextBoxFor(m => m.Email, new { @class = "form-control", placeholder = "example@gmail.com" })
+                                @Html.TextBoxFor(m => m.Email, new { @class = "form-control", placeholder = "example@gmail.com" , required = "required" })
                             </div>
                         </div>
                         <div class="form-group">
                             @Html.LabelFor(m => m.Password, new { @class = "col-md-4 control-label" })
                             <div class="col-md-8">
-                                @Html.PasswordFor(m => m.Password, new { @class = "form-control", placeholder = "Your password" })
+                                @Html.PasswordFor(m => m.Password, new { @class = "form-control", placeholder = "Your password" , required = "required" })
                             </div>
                         </div>
                         <div class="form-group">
                             @Html.LabelFor(m => m.ConfirmPassword, new { @class = "col-md-4 control-label" })
                             <div class="col-md-8">
-                                @Html.PasswordFor(m => m.ConfirmPassword, new { @class = "form-control", placeholder = "Repeat password" })
+                                @Html.PasswordFor(m => m.ConfirmPassword, new { @class = "form-control", placeholder = "Repeat password", required = "required" })
                             </div>
                         </div>
                         <div class="form-group">
                             @Html.LabelFor(m => m.Person.FirstName, new { @class = "col-md-4 control-label " })
                             <div class="col-md-8">
-                                @Html.TextBoxFor(m => m.Person.FirstName, new { @class = "form-control", placeholder = "First name" })
+                                @Html.TextBoxFor(m => m.Person.FirstName, new { @class = "form-control", placeholder = "First name" , required = "required" })
                             </div>
                         </div>
                         <div class="form-group">
                             @Html.LabelFor(m => m.Person.LastName, new { @class = "col-md-4 control-label" })
                             <div class="col-md-8">
-                                @Html.TextBoxFor(m => m.Person.LastName, new { @class = "form-control", placeholder = "Last name" })
+                                @Html.TextBoxFor(m => m.Person.LastName, new { @class = "form-control", placeholder = "Last name", required = "required" })
                             </div>
                         </div>
                         <div class="form-group">
                             @Html.LabelFor(m => m.Person.BirthDate, new { @class = "col-md-4 control-label" })
                             <div class="col-md-8">
-                                @Html.TextBoxFor(m => m.Person.BirthDate, new { @class = "form-control", type = "date", min = "1930-01-01", max = "1995-12-12" })
+                                @Html.TextBoxFor(m => m.Person.BirthDate, new { @class = "form-control", type = "date", required = "required" })
                             </div>
                         </div>
                         <div class="form-group">
                             @Html.LabelFor(m => m.Person.Gender, new { @class = "col-md-4 control-label" })
                             <div class="col-md-8">
-                                @Html.DropDownListFor(m => m.Person.Gender, EnumHelper.GetSelectList(typeof(GenderType)), new { @class = "form-control" })
+                                @Html.DropDownListFor(m => m.Person.Gender, EnumHelper.GetSelectList(typeof(GenderType)), new { @class = "form-control" , required = "required" })
                             </div>
                         </div>
                         <div class="form-group">
                             @Html.LabelFor(m => m.Person.FiscalCode, new { @class = "col-md-4 control-label" })
                             <div class="col-md-8">
-                                @Html.TextBoxFor(m => m.Person.FiscalCode, new { @class = "form-control", placeholder = "FiscalCode" })
+                                @Html.TextBoxFor(m => m.Person.FiscalCode, new { @class = "form-control", placeholder = "FiscalCode", required = "required" })
                             </div>
                         </div>
                         <div class="form-group">
