--- a/PersonalBanking/PersonalBanking.PresentationMVC/Views/Shared/_Layout.cshtml
+++ b/PersonalBanking/PersonalBanking.PresentationMVC/Views/Shared/_Layout.cshtml
@@ -69,8 +69,8 @@
     <script src="~/Scripts/jquery-3.1.1.min.js"></script>
     <script src="~/Scripts/bootstrap.min.js"></script>
 
-    @*<script src="~/Scripts/jquery.validate.js"></script>
+    <script src="~/Scripts/jquery.validate.js"></script>
     <script src="~/Scripts/jquery.validate.unobtrusive.js"></script>
-    <script src="~/Scripts/ValidateDateRange.js"></script>*@
+    <script src="~/Scripts/ValidateDateRange.js"></script>
 </body>
 </html>
