--- a/PersonalBanking/PersonalBanking.PresentationMVC/Views/User/Register.cshtml
+++ b/PersonalBanking/PersonalBanking.PresentationMVC/Views/User/Register.cshtml
@@ -3,7 +3,7 @@
 }
 @using PersonalBanking.Domain.Model
 @using PersonalBanking.PresentationMVC.Extension
-@model PersonalBanking.PresentationMVC.Models.UserViewModel
+@model PersonalBanking.PresentationMVC.Models.CreateUserViewModel
 
     <div class="container" style="margin-top: 3%">
         @using (Html.BeginForm("Register", "User", FormMethod.Post, new { @class = "form-horizontal", role = "form" }))
@@ -40,33 +40,33 @@
                             </div>
                         </div>
                         <div class="form-group">
-                            @Html.LabelFor(m => m.Person.FirstName, new { @class = "col-md-4 control-label " })
+                            @Html.LabelFor(m => m.FirstName, new { @class = "col-md-4 control-label " })
                             <div class="col-md-8">
-                                @Html.TextBoxFor(m => m.Person.FirstName, new { @class = "form-control", placeholder = "First name" })
+                                @Html.TextBoxFor(m => m.FirstName, new { @class = "form-control", placeholder = "First name" })
                             </div>
                         </div>
                         <div class="form-group">
-                            @Html.LabelFor(m => m.Person.LastName, new { @class = "col-md-4 control-label" })
+                            @Html.LabelFor(m => m.LastName, new { @class = "col-md-4 control-label" })
                             <div class="col-md-8">
-                                @Html.TextBoxFor(m => m.Person.LastName, new { @class = "form-control", placeholder = "Last name" })
+                                @Html.TextBoxFor(m => m.LastName, new { @class = "form-control", placeholder = "Last name" })
                             </div>
                         </div>
                         <div class="form-group">
-                            @Html.LabelFor(m => m.Person.BirthDate, new { @class = "col-md-4 control-label" })
+                            @Html.LabelFor(m => m.BirthDate, new { @class = "col-md-4 control-label" })
                             <div class="col-md-8">
-                                @Html.TextBoxFor(m => m.Person.BirthDate, new { @class = "form-control", type = "date" })
+                                @Html.TextBoxFor(m => m.BirthDate, new { @class = "form-control", type = "date" })
                             </div>
                         </div>
                         <div class="form-group">
-                            @Html.LabelFor(m => m.Person.Gender, new { @class = "col-md-4 control-label" })
+                            @Html.LabelFor(m => m.Gender, new { @class = "col-md-4 control-label" })
                             <div class="col-md-8">
-                                @Html.DropDownListFor(m => m.Person.Gender, EnumHelper.GetSelectList(typeof(GenderType)), new { @class = "form-control" })
+                                @Html.DropDownListFor(m => m.Gender, EnumHelper.GetSelectList(typeof(GenderType)), new { @class = "form-control" })
                             </div>
                         </div>
                         <div class="form-group">
-                            @Html.LabelFor(m => m.Person.FiscalCode, new { @class = "col-md-4 control-label" })
+                            @Html.LabelFor(m => m.FiscalCode, new { @class = "col-md-4 control-label" })
                             <div class="col-md-8">
-                                @Html.TextBoxFor(m => m.Person.FiscalCode, new { @class = "form-control", placeholder = "FiscalCode" })
+                                @Html.TextBoxFor(m => m.FiscalCode, new { @class = "form-control", placeholder = "FiscalCode" })
                             </div>
                         </div>
                         <div class="form-group">
