--- a/PersonalBanking/PersonalBanking.PresentationMVC/Views/Shared/_Layout.cshtml
+++ b/PersonalBanking/PersonalBanking.PresentationMVC/Views/Shared/_Layout.cshtml
@@ -57,7 +57,7 @@
         <div class="row">
             <div class="col-md-2"></div>
             <div class="col-md-8">@RenderBody()</div>
-            <div class="col-md-2" style="position: relative"></div>
+            <div class="col-md-2"></div>
         </div>
     </div>
     <div class="panel-footer panel-custom navbar-fixed-bottom text-center">
