--- a/PersonalBanking/PersonalBanking.PresentationMVC/Views/User/Register.cshtml
+++ b/PersonalBanking/PersonalBanking.PresentationMVC/Views/User/Register.cshtml
@@ -5,11 +5,11 @@
 @using PersonalBanking.PresentationMVC.Extension
 @model PersonalBanking.PresentationMVC.Models.CreateUserViewModel
 
-    <div class="container" style="margin-top: 3%">
+    <div style="margin-top: 3%">
         @using (Html.BeginForm("Register", "User", FormMethod.Post, new { @class = "form-horizontal", role = "form" }))
         {
             @Html.AntiForgeryToken()
-            <div class="panel panel-primary" style="border-color: #222; background-color: aliceblue;">
+            <div class="panel panel-primary" style="border-color: #222;background-color: aliceblue;">
                 <div class="panel-heading text-center" style="background-color: #222"><Span style="color:white">Personal Bank Registration</Span></div>
                 <hr />
                 <div class="row">
