--- a/PersonalBanking/PersonalBanking.PresentationMVC/Views/Admin/Users.cshtml
+++ b/PersonalBanking/PersonalBanking.PresentationMVC/Views/Admin/Users.cshtml
@@ -1,14 +1,78 @@
-﻿
+﻿@using PersonalBanking.PresentationMVC.Models;
+@model IEnumerable<UserViewModel>
+
 @{
     ViewBag.Title = "Users";
     Layout = "~/Views/Shared/_LayoutAdmin.cshtml";
 }
 
+<h2>Users</h2>
+
 <div>
-    <h2>GRID HERE (USERS) </h2>
-   
+    <h4>UserViewModel</h4>
+    <hr />
+    @*<dl class="dl-horizontal">
+
+            <dt>
+                @Html.DisplayNameFor(model => model.Username)
+            </dt>
+
+            <dd>
+                @Html.DisplayFor(model => model.Username)
+            </dd>
+
+            <dt>
+                @Html.DisplayNameFor(model => model.Email)
+            </dt>
+
+            <dd>
+                @Html.DisplayFor(model => model.Email)
+            </dd>
+
+            <dt>
+                @Html.DisplayNameFor(model => model.IsAdmin)
+            </dt>
+
+            <dd>
+                @Html.DisplayFor(model => model.IsAdmin)
+            </dd>
+
+        </dl>*@
+    <table>
+        <tr>
+            <th>
+                @Html.DisplayNameFor(model => model.Username)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.Email)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.IsAdmin)
+            </th>
+            <th>Actions</th>
+        </tr>
+
+        @foreach (var item in Model)
+        {
+            @Html.HiddenFor(m => item.Id)
+            <tr>
+                <td>
+                    @Html.DisplayFor(m => item.Username)
+                </td>
+                <td>
+                    @Html.DisplayFor(m => item.Email)
+                </td>
+                <td>
+                    @Html.DisplayFor(m => item.IsAdmin)
+                </td>
+                <td>
+                    <p>
+                        @Html.ActionLink("Edit", "EditUser", new { userId = item.Id }) |
+                        @Html.ActionLink("Back to List", "Index")
+                    </p>
+                </td>
+            </tr>
+
+        }
+    </table>
 </div>
-
-
-
-
