--- a/PersonalBanking/PersonalBanking.PresentationMVC/Views/Shared/_LayoutAdmin.cshtml
+++ b/PersonalBanking/PersonalBanking.PresentationMVC/Views/Shared/_LayoutAdmin.cshtml
@@ -59,7 +59,7 @@
     
     <div id="sideNav" class="sidenav">
         <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
-        <a href="#">@Html.ActionLink("Users", "Users", "Admin")</a>
+        <a href="#">@Html.ActionLink("Users", "Users", "AdminUser")</a>
         <a href="#">Bank Accounts</a>
         <a href="#">Card Accounts</a>
         <a href="#">Transaction Log</a>
