--- a/PersonalBanking/PersonalBanking.PresentationMVC/Views/User/Login.cshtml
+++ b/PersonalBanking/PersonalBanking.PresentationMVC/Views/User/Login.cshtml
@@ -1,18 +1,50 @@
-﻿
-@{
-    Layout = null;
+﻿@{
+    Layout = "~/Views/Shared/_Layout.cshtml";
 }
+@using PersonalBanking.PresentationMVC.Extension
+@model PersonalBanking.PresentationMVC.Models.LoginViewModel
 
-<!DOCTYPE html>
+<div style="margin-top: 3%">
+    @using (Html.BeginForm("Register", "User", FormMethod.Post, new { @class = "form-horizontal", role = "form" }))
+    {
+        @Html.AntiForgeryToken()
+        <div class="panel panel-primary" style="border-color: #222;background-color: aliceblue;">
+            <div class="panel-heading text-center" style="background-color: #222"><Span style="color:white">Login</Span></div>
+            <hr />
+            <div class="row">
+                <div class="col-md-6">
+                    <div class="form-group">
+                        @Html.LabelFor(m => m.Username, new { @class = "col-md-4 control-label" })
+                        <div class="col-md-8" style="margin-top:3%">
+                            @Html.TextBoxFor(m => m.Username, new { @class = "form-control", placeholder = "Used for logging in" })
+                        </div>
+                    </div>
+                    <div class="form-group">
+                        @Html.LabelFor(m => m.Password, new { @class = "col-md-4 control-label" })
+                        <div class="col-md-8">
+                            @Html.PasswordFor(m => m.Password, new { @class = "form-control", placeholder = "Your password"  })
+                        </div>
+                    </div>
+                    <div class="form-group">
+                        <div class="col-md-offset-4 col-md-4">
+                            <input type="submit" class="btn btn-default" value="Login" />
+                        </div>
+                        
+                        <div style="margin-top: 20px; padding-left: 20%">
+                            @Html.ValidationSummary("", new {@class = "text-danger"})
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-6">
+                    <div class="center-block text-center">
+                        @Html.CustomGreetingsOnTime()
+                        <img class="img-responsive img-thumbnail" src="~/Images/reg1.jpg" width="400"/>
+                    </div>
+                </div>
+            </div>
 
-<html>
-<head>
-    <meta name="viewport" content="width=device-width" />
-    <title>Login here</title>
-</head>
-<body>
-<div>
-    <h1>TO DO// Login here</h1>
+        </div>
+    }
+
 </div>
-</body>
-</html>
+
