--- a/PersonalBanking/PersonalBanking.PresentationMVC/Views/Shared/_Layout.cshtml
+++ b/PersonalBanking/PersonalBanking.PresentationMVC/Views/Shared/_Layout.cshtml
@@ -45,7 +45,7 @@
                     <li class="dropdown">
                         <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Account <span class="caret"></span></a>
                         <ul class="dropdown-menu">
-                            <li><a href="#"><span class="glyphicon glyphicon-log-in"></span> Log In</a></li>
+                            <li><a href="@Url.Action("Login", "User")"><span class="glyphicon glyphicon-log-in"></span> Log In</a></li>
                             <li><a href="@Url.Action("Register", "User")"><span class="glyphicon glyphicon-user"></span>Register</a></li>
                         </ul>
                     </li>
