--- a/PersonalBanking/PersonalBanking.PresentationMVC/Views/Shared/_LayoutAdmin.cshtml
+++ b/PersonalBanking/PersonalBanking.PresentationMVC/Views/Shared/_LayoutAdmin.cshtml
@@ -1,4 +1,12 @@
-﻿<!DOCTYPE html>
+﻿@{
+    if (Session["UserId"] == null)
+    {
+        Response.Redirect("~/User/Login");
+    }
+}
+
+
+<!DOCTYPE html>
 <html>
 <head>
     <meta charset="utf-8" />
@@ -45,10 +53,9 @@
                 <ul class="nav navbar-nav navbar-right">
                     <li><a href="#">Contact us</a></li>
                     <li class="dropdown">
-                        <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Account <span class="caret"></span></a>
+                        <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Wellcome @Session["Username"] <span class="caret"></span></a>
                         <ul class="dropdown-menu">
-                            <li><a href="#"><span class="glyphicon glyphicon-log-in"></span> Log In</a></li>
-                            <li><a href="@Url.Action("Register", "User")"><span class="glyphicon glyphicon-user"></span>Register</a></li>
+                            <li><a href="@Url.Action("LogOut", "User")"><span class="glyphicon glyphicon-log-out"></span>Log Out</a></li>
                         </ul>
                     </li>
                 </ul>
