--- a/PersonalBanking/PersonalBanking.PresentationMVC/Views/AdminBankAccount/BankAccount.cshtml
+++ b/PersonalBanking/PersonalBanking.PresentationMVC/Views/AdminBankAccount/BankAccount.cshtml
@@ -33,18 +33,11 @@
         <th>
             @Html.DisplayNameFor(model => model.DepIntRate)
         </th>
-        <th>
-            @Html.DisplayNameFor(model => model.FirstName)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.LastName)
-        </th>
+        
         <th>
             @Html.DisplayNameFor(model => model.FiscalCode)
         </th>
-        <th>
-            @Html.DisplayNameFor(model => model.AccountType)
-        </th>
+        
         <th></th>
     </tr>
 
@@ -71,21 +64,13 @@
         <td>
             @Html.DisplayFor(modelItem => item.DepIntRate)
         </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.FirstName)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.LastName)
-        </td>
+        
         <td>
             @Html.DisplayFor(modelItem => item.FiscalCode)
         </td>
         <td>
-            @Html.DisplayFor(modelItem => item.AccountType)
-        </td>
-        <td>
-            @Html.ActionLink("Edit", "Edit", new { /* id=item.PrimaryKey */ }) |
-            @Html.ActionLink("Delete", "Delete", new { /* id=item.PrimaryKey */ })
+            @Html.ActionLink("Edit", "EditBankAccount", new { bankAccountId = item.Id }) |
+            @Html.ActionLink("Delete", "DeleteBankAccount", new { bankAccountId = item.Id})
         </td>
     </tr>
 }
