--- a/PersonalBanking/PersonalBanking.PresentationMVC/Views/Shared/_LayoutAdmin.cshtml
+++ b/PersonalBanking/PersonalBanking.PresentationMVC/Views/Shared/_LayoutAdmin.cshtml
@@ -1,8 +1,8 @@
 ﻿@{
-    if (Session["UserId"] == null)
-    {
-        Response.Redirect("~/User/Login");
-    }
+//if (Session["UserId"] == null && Session["IsAdmin"].ToString() != "True")
+//{
+//    Response.Redirect("~/User/Login");
+//}
 }
 
 
@@ -67,7 +67,7 @@
     <div id="sideNav" class="sidenav">
         <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
         <a href="#">@Html.ActionLink("Users", "Users", "AdminUser")</a>
-        <a href="#">Bank Accounts</a>
+        <a href="#">@Html.ActionLink("Bank Accounts", "BankAccount", "AdminBankAccount")</a>
         <a href="#">Card Accounts</a>
         <a href="#">Transaction Log</a>
     </div>
