--- a/PersonalBanking/PersonalBanking.PresentationMVC/Views/Shared/_Layout.cshtml
+++ b/PersonalBanking/PersonalBanking.PresentationMVC/Views/Shared/_Layout.cshtml
@@ -42,6 +42,8 @@
                 </form>
                 <ul class="nav navbar-nav navbar-right">
                     <li><a href="#">Contact us</a></li>
+                    @{// to do session check 
+                    }
                     <li class="dropdown">
                         <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Account <span class="caret"></span></a>
                         <ul class="dropdown-menu">
