--- a/PersonalBanking/PersonalBanking.PresentationMVC/Views/Shared/_LayoutClient.cshtml
+++ b/PersonalBanking/PersonalBanking.PresentationMVC/Views/Shared/_LayoutClient.cshtml
@@ -68,11 +68,10 @@
 
     <div id="sideNav" class="sidenav">
         <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
-        <a href="#"></a>
-        <a href="#"></a>
-        <a href="#"></a>
-        <a href="#"></a>
-        <a href="#"></a>
+        <a href="#">@Html.ActionLink("Current accounst list", "CurrentBankAccounts", "ClientBanking")</a>
+        <a href="#">@Html.ActionLink("Card list", "Cards", "ClientBanking")</a>
+        <a href="#">@Html.ActionLink("Transaction History", "Transactions", "ClientBanking")</a>
+        <a href="#">@Html.ActionLink("Public paymants", "PaymantMenu", "ClientBanking")</a>
 
 
     </div>
