--- a/PersonalBanking/PersonalBanking.PresentationMVC/Views/AdminUser/Users.cshtml
+++ b/PersonalBanking/PersonalBanking.PresentationMVC/Views/AdminUser/Users.cshtml
@@ -11,7 +11,7 @@
 <div>
     <h4>Users</h4>
     <hr />
-    <table class="table table-striped">
+    <table class="table table-striped table-bordered table-condensed table-hover ">
         <tr>
             <th>
                 @Html.DisplayNameFor(model => model.Username)
